<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:paddingBottom="10dp"
        android:background="@color/paleGray"
        android:id="@+id/rv_pakets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_payment"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/rv_pakets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ll_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_subtotal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:lineSpacingExtra="4.7sp"
                    android:text="@string/subtotal"
                    />

                <TextView
                    android:id="@+id/tv_subtotal"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:lineSpacingExtra="4.7sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="0"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_diskon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:lineSpacingExtra="4.7sp"
                    android:text="@string/diskon"
                    />

                <TextView
                    android:id="@+id/tv_diskon"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:lineSpacingExtra="4.7sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="0"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_total"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:lineSpacingExtra="4.7sp"
                    android:text="@string/total"
                    />

                <TextView
                    android:id="@+id/tv_total"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:lineSpacingExtra="4.7sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="0"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_outline"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="26.7sp"
                    android:textColor="#01579b"
                    android:lineSpacingExtra="8.7sp"
                    android:text="@string/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_bayar"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="26.7sp"
                    android:textColor="@color/white"
                    android:lineSpacingExtra="8.7sp"
                    android:text="@string/bayar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
